# fastapi-blocks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
examples/: EXAMPLES.md
examples/block_example/: api_router.py  block_config.toml  router.py
examples/block_example/templates/: index.html
fastapi_blocks/: __init__.py  __main__.py  block.py  block_manager.py  cli.py  settings.py
fastapi_blocks/default_blocks/homepage_block/: settings.py
fastapi_blocks/default_blocks/sqlmodel_block/: block_config.toml  settings.py
src/fastapi_blocks/: __init__.py  __init__.py.mako  block_manager.py  cli.py  settings.py  utils.py
src/fastapi_blocks/default_blocks/block_template/: block_config.toml  router.py  settings.py
src/fastapi_blocks/default_blocks/block_template/templates/: index.html
src/fastapi_blocks/default_blocks/homepage_block/: block_config.toml  router.py  settings.py
src/fastapi_blocks/default_blocks/homepage_block/templates/: index.html
src/fastapi_blocks/templates/: block_config.toml.j2
tests/: conftest.py  confttest.py  test_block_manager.py  test_cli.py  test_placeholder.py
