[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-blocks"
version = "0.1.5"
description = "A library for creating modular FastAPI applications."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "r3sbarra)"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "tomli-w",
    "jinja2",
    "dirhash"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[project.scripts]
fastapi-blocks = "fastapi_blocks.cli:main"
